Sun Sep  7 18:10:28 2008  Tanaka Akira  <akr@fsij.org>

	* transcode_data.h (STR1): defined for a string up to 255 bytes.
	  (STR1_BYTEINDEX): defined.
	  (makeSTR1): defined.

	* tool/transcode-tblgen.rb: generate STR1.

	* transcode.c (transcode_restartable0): interpret STR1.

	* enc/trans/escape.trans (fun_so_escape_xml_chref): removed.  STR1 is
	  used instead.

Sun Sep  7 17:54:45 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* configure.in: Mac OS X's crypt(2) is broken with invalid salt.
	  [ruby-dev:35899]
	* string.c (rb_str_crypt): ditto.

Sun Sep  7 17:29:49 2008  Tanaka Akira  <akr@fsij.org>

	* tool/transcode-tblgen.rb: o4 is usable only if the first byte is
	  f0-f7.

Sun Sep  7 12:44:26 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (make_writeconv): choose ASCII compatible encoding as
	  intermediate encoding if stateful encoder exists.

Sun Sep  7 12:09:29 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (ECONV_XML_ATTR_CONTENT_ENCODER): defined.
	  (ECONV_STATEFUL_ENCODER_MASK): defined.
	  (ECONV_XML_ATTR_QUOTE_ENCODER): defined.
	  (ECONV_XML_ATTR_ENCODER): removed.

	* enc/trans/escape.trans (rb_escape_xml_attr_content): defined.
	  (rb_escape_xml_attr_quote): defined.
	  (rb_escape_xml_attr): removed.

	* io.c (NEED_WRITECONV): writeconv is required if supplemental
	  converter is used.
	  (make_writeconv): apply stateful encoder in writeconv.

	* transcode.c: follow the constant change.

Sun Sep  7 07:24:09 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/*.el:  merged the following patches from Nathan Weizenbaum
	  <nex342 at gmail.com>.   [ruby-core:18424]

	* misc/ruby-mode.el: improve here-doc performance.

	* misc/ruby-mode.el: don't crash the whole mode if the Subversion
	  $ keyword isn't interpolated.

	* misc/ruby-mode.el: don't highlight keywords when they're the
	  beginning of non-keyword symbols.

	* misc/ruby-mode.el, misc/ruby-electric.el: use regexp-opt where
	  possible for more efficient regexps.
